update-database-coneection

--- a/ElsaTestDBDemo/appsettings.json
+++ b/ElsaTestDBDemo/appsettings.json
@@ -8,7 +8,7 @@
   },
   "ConnectionStrings": {
     //"Defualt": "Server=.\\SQLEXPRESS;Database=DemoWF;Trusted_Connection=True;",
-    "Defualt": "Server=192.168.1.30;Database=TassniefElsaWF;Trusted_Connection=True;user id=sa;password=P@ssw0rd;"
+    "Defualt": "Server=192.168.1.30;Database=TassniefElsaWF;Trusted_Connection=False;user id=sa;password=P@ssw0rd;"
   },
   "Elsa": {
     "Server": {
